# ekke_app_main

main_backend/: Cargo.toml  README.md
main_backend/src/: main.rs
main_backend/src/libmainui/: lib.rs  main_ui.rs
main_backend/src/libmainui/main_ui/: frontend_request.rs  http_request.rs
main_frontend/: Cargo.toml  index.html
main_frontend/src/: lib.rs
