[package]

	name    = "ekke_main"
	version = "0.1.0"
	authors = [ "Naja Melan <najamelan@autistici.org>" ]
	edition = "2018"


[[bin]]

	path = "src/main.rs"
	name = "ekke_main"

[lib]

	name = "libmain"
	path = "src/libmain/lib.rs"


[dependencies]

	ekke_config = { path = "../../../ekke_config" }
	ekke_core   = { path = "../../../ekke_core"   }
	ekke_io     = { path = "../../../ekke_io"     }
