[package]

	name    = "ekke_main_frontend"
	version = "0.1.0"
	authors = [ "Naja Melan <najamelan@autistici.org>" ]
	edition = "2018"


[lib]

	crate-type = [ "cdylib" ]


[dependencies]

	wasm-bindgen = "0.2.37"


[dependencies.web-sys]

	version  = "0.3.4"

	features = [

	  'Document'    ,
	  'Element'     ,
	  'HtmlElement' ,
	  'Node'        ,
	  'Window'      ,

	]
